// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Melodies test suite should generate melodies based on a movement timeline - free rhythm 1`] = `
Array [
  Object {
    "dur": 720,
    "midi": 69,
    "note": "A3",
    "time": 0,
  },
  Object {
    "dur": 320,
    "midi": 71,
    "note": "B3",
    "time": 720,
  },
  Object {
    "dur": 120,
    "midi": 66,
    "note": "F#3",
    "time": 1040,
  },
  Object {
    "dur": 120,
    "midi": 71,
    "note": "B3",
    "time": 1160,
  },
  Object {
    "dur": 160,
    "midi": 66,
    "note": "F#3",
    "time": 1280,
  },
  Object {
    "dur": 320,
    "midi": 78,
    "note": "F#4",
    "time": 1440,
  },
  Object {
    "dur": 480,
    "midi": 81,
    "note": "A4",
    "time": 1760,
  },
  Object {
    "dur": 240,
    "midi": 85,
    "note": "C#5",
    "time": 2240,
  },
  Object {
    "dur": 240,
    "midi": 81,
    "note": "A4",
    "time": 2480,
  },
  Object {
    "dur": 160,
    "midi": 81,
    "note": "A4",
    "time": 2720,
  },
  Object {
    "dur": 480,
    "midi": 81,
    "note": "A4",
    "time": 2880,
  },
  Object {
    "dur": 480,
    "midi": 80,
    "note": "G#4",
    "time": 3360,
  },
  Object {
    "dur": 320,
    "midi": 78,
    "note": "F#4",
    "time": 3840,
  },
  Object {
    "dur": 480,
    "midi": 81,
    "note": "A4",
    "time": 4160,
  },
  Object {
    "dur": 240,
    "midi": 85,
    "note": "C#5",
    "time": 4640,
  },
  Object {
    "dur": 240,
    "midi": 81,
    "note": "A4",
    "time": 4880,
  },
  Object {
    "dur": 160,
    "midi": 81,
    "note": "A4",
    "time": 5120,
  },
  Object {
    "dur": 480,
    "midi": 66,
    "note": "F#3",
    "time": 5280,
  },
  Object {
    "dur": 240,
    "midi": 69,
    "note": "A3",
    "time": 5760,
  },
  Object {
    "dur": 240,
    "midi": 66,
    "note": "F#3",
    "time": 6000,
  },
  Object {
    "dur": 480,
    "midi": 69,
    "note": "A3",
    "time": 6240,
  },
  Object {
    "dur": 480,
    "midi": 81,
    "note": "A4",
    "time": 6720,
  },
  Object {
    "dur": 480,
    "midi": 80,
    "note": "G#4",
    "time": 7200,
  },
]
`;

exports[`A Melodies test suite should generate melodies based on a movement timeline - turn rhythm 1`] = `
Array [
  Object {
    "dur": 240,
    "midi": 73,
    "note": "C#4",
    "time": 0,
  },
  Object {
    "dur": 240,
    "midi": 80,
    "note": "G#4",
    "time": 240,
  },
  Object {
    "dur": 240,
    "midi": 76,
    "note": "E4",
    "time": 480,
  },
  Object {
    "dur": 240,
    "midi": 74,
    "note": "D4",
    "time": 720,
  },
  Object {
    "dur": 240,
    "midi": 73,
    "note": "C#4",
    "time": 960,
  },
  Object {
    "dur": 240,
    "midi": 80,
    "note": "G#4",
    "time": 1200,
  },
  Object {
    "dur": 240,
    "midi": 76,
    "note": "E4",
    "time": 1440,
  },
  Object {
    "dur": 240,
    "midi": 74,
    "note": "D4",
    "time": 1680,
  },
  Object {
    "dur": 240,
    "midi": 73,
    "note": "C#4",
    "time": 1920,
  },
  Object {
    "dur": 240,
    "midi": 80,
    "note": "G#4",
    "time": 2160,
  },
  Object {
    "dur": 240,
    "midi": 76,
    "note": "E4",
    "time": 2400,
  },
  Object {
    "dur": 240,
    "midi": 74,
    "note": "D4",
    "time": 2640,
  },
  Object {
    "dur": 480,
    "midi": 78,
    "note": "F#4",
    "time": 2880,
  },
  Object {
    "dur": 480,
    "midi": 81,
    "note": "A4",
    "time": 3360,
  },
  Object {
    "dur": 240,
    "midi": 83,
    "note": "B4",
    "time": 3840,
  },
  Object {
    "dur": 240,
    "midi": 78,
    "note": "F#4",
    "time": 4080,
  },
  Object {
    "dur": 240,
    "midi": 76,
    "note": "E4",
    "time": 4320,
  },
  Object {
    "dur": 240,
    "midi": 74,
    "note": "D4",
    "time": 4560,
  },
  Object {
    "dur": 480,
    "midi": 68,
    "note": "G#3",
    "time": 4800,
  },
  Object {
    "dur": 480,
    "midi": 73,
    "note": "C#4",
    "time": 5280,
  },
  Object {
    "dur": 240,
    "midi": 68,
    "note": "G#3",
    "time": 5760,
  },
  Object {
    "dur": 240,
    "midi": 73,
    "note": "C#4",
    "time": 6000,
  },
  Object {
    "dur": 240,
    "midi": 71,
    "note": "B3",
    "time": 6240,
  },
  Object {
    "dur": 240,
    "midi": 66,
    "note": "F#3",
    "time": 6480,
  },
  Object {
    "dur": 960,
    "midi": 71,
    "note": "B3",
    "time": 6720,
  },
  Object {
    "dur": 480,
    "midi": 66,
    "note": "F#3",
    "time": 7680,
  },
]
`;

exports[`A Melodies test suite should generate progression with defined structures 1`] = `
Array [
  Object {
    "dur": 360,
    "midi": 68,
    "note": "Ab3",
    "time": 0,
  },
  Object {
    "dur": 60,
    "midi": 68,
    "note": "Ab3",
    "time": 360,
  },
  Object {
    "dur": 60,
    "midi": 0,
    "note": "-",
    "time": 420,
  },
  Object {
    "dur": 360,
    "midi": 68,
    "note": "Ab3",
    "time": 480,
  },
  Object {
    "dur": 60,
    "midi": 68,
    "note": "Ab3",
    "time": 840,
  },
  Object {
    "dur": 60,
    "midi": 0,
    "note": "-",
    "time": 900,
  },
  Object {
    "dur": 360,
    "midi": 72,
    "note": "C4",
    "time": 960,
  },
  Object {
    "dur": 120,
    "midi": 75,
    "note": "Eb4",
    "time": 1320,
  },
  Object {
    "dur": 240,
    "midi": 68,
    "note": "Ab3",
    "time": 1440,
  },
  Object {
    "dur": 240,
    "midi": 70,
    "note": "Bb3",
    "time": 1680,
  },
  Object {
    "dur": 360,
    "midi": 68,
    "note": "Ab3",
    "time": 1920,
  },
  Object {
    "dur": 60,
    "midi": 68,
    "note": "Ab3",
    "time": 2280,
  },
  Object {
    "dur": 60,
    "midi": 0,
    "note": "-",
    "time": 2340,
  },
  Object {
    "dur": 480,
    "midi": 0,
    "note": "-",
    "time": 2400,
  },
  Object {
    "dur": 360,
    "midi": 65,
    "note": "F3",
    "time": 2880,
  },
  Object {
    "dur": 120,
    "midi": 0,
    "note": "-",
    "time": 3240,
  },
  Object {
    "dur": 240,
    "midi": 73,
    "note": "Db4",
    "time": 3360,
  },
  Object {
    "dur": 240,
    "midi": 75,
    "note": "Eb4",
    "time": 3600,
  },
]
`;
